ios start muted

--- a/assets/YTPlayerView-iframe-player.html
+++ b/assets/YTPlayerView-iframe-player.html
@@ -59,6 +59,7 @@
     });
 
     function onReady(event) {
+         player.mute()
         window.location.href = 'ytplayer://onReady?data=' + event.data;
     }
 
